Production-grade improvements for InMemoryKeyValueStore